tests/ui/parser/pat-ref-enum.stderr
error: expected identifier, found enum pattern
  --> $DIR/pat-ref-enum.rs:3:11
   |
LL |       ref Some(i) => {}
   |           ^^^^

error: aborting due to 1 previous error

